# cpp-nix-2023

./: .gitignore  CMakeLists.txt  flake.nix  package.nix
.github/workflows/: check.yml
src/: main.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
